--- a/M96Dev.TaxonomyPosts.csproj
+++ b/M96Dev.TaxonomyPosts.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" Version="1.8.3" />
     <PackageReference Include="OrchardCore.DisplayManagement" Version="1.8.3" />
     <PackageReference Include="OrchardCore.Taxonomies" Version="1.8.3" />
+    <PackageReference Include="OrchardCore.Contents.TagHelpers" Version="1.8.3" />
+
   </ItemGroup>
 
 </Project>
